--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a-scene embedded arjs vr-mode-ui="enabled: false">
             <a-entity camera></a-entity>
             <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795">
-                <a-box position="0 0.1 0" material="opacity: 0.75; color: #EF00EF"></a-box>
+                <!-- Generate an object here -->
             </a-marker>
         </a-scene>
 
