--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a-scene embedded arjs vr-mode-ui="enabled: false">
             <a-entity camera></a-entity>
             <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795">
+                <a-box scale="1 0.1 1" position="0 0.1 0"></a-box>
                 <!-- Generate an object here -->
             </a-marker>
         </a-scene>
@@ -29,5 +30,6 @@
     </body>
 
     <!-- My Source -->
-    <script src="app.js"></script>
+    <script type="module" src="graph-layout.js"></script>
+    <script type="module" src="app.js"></script>
 </html>
