style: cleaned up with ramda

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </div>
     </body>
 
+    <!-- JS Dependencies -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
+
     <!-- My Source -->
     <script type="module" src="graph-layout.js"></script>
     <script type="module" src="app.js"></script>
