--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>ARjs Marker Sandbox</title>
+        <title>Lonnie Souder AR</title>
         <meta name="author" content="Lonnie Souder II">
-        <meta name="description" content="Playing with AR">
+        <meta name="description" content="My AR Resume">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="style.css">
+
+        <!-- Import AR.js -->
+        <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+        <!-- JS Dependencies -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
+
+        <!-- My Source -->
+        <script type="module" src="graph-layout.js"></script>
+        <script type="module" src="app.js"></script>
     </head>
 
-    <!-- Import AR.js -->
-    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    
     <body style="margin : 0px; overflow: hidden;">
         <!-- AR -->
         <a-scene embedded arjs vr-mode-ui="enabled: false">
             <a-entity camera></a-entity>
-            <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795">
+            <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795" smooth="true">
                 <a-box scale="1 0.1 1" position="0 0.1 0"></a-box>
                 <!-- Generate an object here -->
             </a-marker>
@@ -25,14 +32,7 @@
 
         <!-- UI -->
         <div id="lls-ui">
-            <select id="camera-select" onchange="CameraSelectOnChange()"></select>
+            <select id="camera-select"></select>
         </div>
     </body>
-
-    <!-- JS Dependencies -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
-
-    <!-- My Source -->
-    <script type="module" src="graph-layout.js"></script>
-    <script type="module" src="app.js"></script>
 </html>
