--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <a-entity camera></a-entity>
             <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795" smooth="true">
                 <a-box scale="1 0.1 1" position="0 0.1 0"></a-box>
-                <!-- Generate an object here -->
+                <a-entity id="graph" position="0 0.5 0">
+                    <!-- Generate an object here -->
+                </a-entity>
             </a-marker>
         </a-scene>
 
