--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Import AR.js -->
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
 
     <!-- JS Dependencies -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
@@ -26,7 +27,7 @@
     <a-scene embedded arjs vr-mode-ui="enabled: false">
         <a-entity camera></a-entity>
         <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795" smooth="true">
-            <a-box scale="1 0.1 1" position="0 0.1 0"></a-box>
+            <a-box scale="1 0.1 1" position="0 0.01 0" material="color: cyan; opacity: 0.2"></a-box>
             <a-entity id="graph" position="0 0.5 0">
                 <!-- Generate an object here -->
             </a-entity>
