--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- AR -->
     <a-scene embedded arjs vr-mode-ui="enabled: false">
         <a-entity camera></a-entity>
-        <a-marker type="pattern" preset="custom" url="pattern-desktop_server.patt" size="0.10795" smooth="true">
+        <a-marker type="pattern" preset="custom" url="pattern-qr.patt" size="0.10795" smooth="true">
             <a-box scale="1 0.1 1" position="0 0.01 0" material="color: cyan; opacity: 0.2"></a-box>
             <a-entity id="graph" position="0 0.5 0" scale="0.5 0.5 0.5">
                 <!-- Generate an object here -->
